fix: allow all Vercel origin patterns and preflight OPTIONS in Spring Security CORS